--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,11 @@
     <string name="message_exit_alert">Si sale de la aplicacíon perderá todo el progreso</string>
     <string name="negative_exit_alert">Canselar</string>
     <string name="positive_exit_alert">Salir</string>
+    <string name="home">Home</string>
+    <string name="title_camera">camera</string>
+    <string name="title_contact">contact</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_nutrition">Nutrition</string>
 
 </resources>
